--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,11 +63,11 @@ jobs:
           terraform -chdir=infra/terraform show -json tfplan-${{ matrix.cloud }} > infra/terraform/tfplan-${{ matrix.cloud }}.json
         env:
           # AWS credentials (auto-configured by configure-aws-credentials action)
-          # Azure credentials - only set for Azure runs
-          ARM_CLIENT_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_CLIENT_ID || '' }}
-          ARM_CLIENT_SECRET: ${{ matrix.cloud == 'azure' && secrets.ARM_CLIENT_SECRET || '' }}
-          ARM_SUBSCRIPTION_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_SUBSCRIPTION_ID || '' }}
-          ARM_TENANT_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_TENANT_ID || '' }}
+          # Azure credentials - set real values for Azure runs, dummy values for others
+          ARM_CLIENT_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_CLIENT_ID || '00000000-0000-0000-0000-000000000000' }}
+          ARM_CLIENT_SECRET: ${{ matrix.cloud == 'azure' && secrets.ARM_CLIENT_SECRET || 'dummy-secret' }}
+          ARM_SUBSCRIPTION_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_SUBSCRIPTION_ID || '00000000-0000-0000-0000-000000000000' }}
+          ARM_TENANT_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_TENANT_ID || '00000000-0000-0000-0000-000000000000' }}
           # GCP credentials - provide project ID even for non-GCP runs to prevent provider errors
           TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID || 'dummy-project-id' }}
           # Disable GCP application default credentials when not using GCP
