--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,13 +28,13 @@ jobs:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
 
       - name: Terraform format check
-        run: terraform fmt -check -recursive infra/terraform
+        run: terraform fmt -check -recursive infra/terraform/${{ matrix.cloud }}
 
       - name: Terraform init
-        run: terraform -chdir=infra/terraform init -backend=false
+        run: terraform -chdir=infra/terraform/${{ matrix.cloud }} init -backend=false
 
       - name: Terraform validate
-        run: terraform -chdir=infra/terraform validate
+        run: terraform -chdir=infra/terraform/${{ matrix.cloud }} validate
 
       - name: Configure AWS credentials
         if: matrix.cloud == 'aws'
@@ -45,33 +45,28 @@ jobs:
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ secrets.AWS_REGION || 'us-east-1' }}
 
+      - name: Configure Azure credentials
+        if: matrix.cloud == 'azure'
+        run: |
+          echo "ARM_CLIENT_ID=${{ secrets.ARM_CLIENT_ID }}" >> $GITHUB_ENV
+          echo "ARM_CLIENT_SECRET=${{ secrets.ARM_CLIENT_SECRET }}" >> $GITHUB_ENV
+          echo "ARM_SUBSCRIPTION_ID=${{ secrets.ARM_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
+          echo "ARM_TENANT_ID=${{ secrets.ARM_TENANT_ID }}" >> $GITHUB_ENV
+
       - name: Configure GCP credentials
         if: matrix.cloud == 'gcp'
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Create dummy GCP credentials for non-GCP runs
-        if: matrix.cloud != 'gcp'
-        run: |
-          mkdir -p $HOME/.config/gcloud
-          echo '{"type": "service_account", "project_id": "dummy-project"}' > $HOME/.config/gcloud/application_default_credentials.json
+      - name: Set GCP Project ID
+        if: matrix.cloud == 'gcp'
+        run: echo "TF_VAR_gcp_project_id=${{ secrets.GCP_PROJECT_ID }}" >> $GITHUB_ENV
 
       - name: Terraform plan for ${{ matrix.cloud }}
         run: |
-          terraform -chdir=infra/terraform plan -var="cloud=${{ matrix.cloud }}" -out=tfplan-${{ matrix.cloud }}
-          terraform -chdir=infra/terraform show -json tfplan-${{ matrix.cloud }} > infra/terraform/tfplan-${{ matrix.cloud }}.json
-        env:
-          # AWS credentials (auto-configured by configure-aws-credentials action)
-          # Azure credentials - set real values for Azure runs, dummy values for others
-          ARM_CLIENT_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_CLIENT_ID || '00000000-0000-0000-0000-000000000000' }}
-          ARM_CLIENT_SECRET: ${{ matrix.cloud == 'azure' && secrets.ARM_CLIENT_SECRET || 'dummy-secret' }}
-          ARM_SUBSCRIPTION_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_SUBSCRIPTION_ID || '00000000-0000-0000-0000-000000000000' }}
-          ARM_TENANT_ID: ${{ matrix.cloud == 'azure' && secrets.ARM_TENANT_ID || '00000000-0000-0000-0000-000000000000' }}
-          # GCP credentials - provide project ID even for non-GCP runs to prevent provider errors
-          TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID || 'dummy-project-id' }}
-          # Disable GCP application default credentials when not using GCP
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ matrix.cloud == 'gcp' && format('{0}/gcp-key.json', runner.temp) || '' }}
+          terraform -chdir=infra/terraform/${{ matrix.cloud }} plan -out=tfplan-${{ matrix.cloud }}
+          terraform -chdir=infra/terraform/${{ matrix.cloud }} show -json tfplan-${{ matrix.cloud }} > infra/terraform/${{ matrix.cloud }}/tfplan-${{ matrix.cloud }}.json
 
       - name: Install OPA
         run: |
@@ -83,7 +78,7 @@ jobs:
         run: opa eval --fail-defined --format pretty --data policies/terraform --input policies/terraform/sample-tfplan.json "data.terraform.deny"
 
       - name: Evaluate Terraform policy pack (${{ matrix.cloud }} plan)
-        run: opa eval --fail-defined --format pretty --data policies/terraform --input infra/terraform/tfplan-${{ matrix.cloud }}.json "data.terraform.deny"
+        run: opa eval --fail-defined --format pretty --data policies/terraform --input infra/terraform/${{ matrix.cloud }}/tfplan-${{ matrix.cloud }}.json "data.terraform.deny"
         continue-on-error: true
 
       - name: Install Conftest
@@ -100,5 +95,5 @@ jobs:
         if: always()
         with:
           name: terraform-plan-${{ matrix.cloud }}
-          path: infra/terraform/tfplan-${{ matrix.cloud }}.json
+          path: infra/terraform/${{ matrix.cloud }}/tfplan-${{ matrix.cloud }}.json
           retention-days: 30
